# interface1

./: README.md
interface1/: README.MD
interface1/interface_core/: README.md  pyproject.toml  requirements.txt
interface1/interface_core/interface_core/: __init__.py  config.py  main.py  models.py  registry.py  telemetry.py
interface1/interface_core/interface_core/adapters/: base.py
interface1/interface_core/interface_core/ml/: matcher.py
interface1/interface_core/interface_core/phases/: discovery.py  lifecycle.py  matching.py  policy.py  synthesis.py
interface1/interface_core/tests/: test_interface_core.py
interface_core/: Dockerfile  docker-compose.yml  otel-collector-config.yaml  prometheus.yml
interface_core/examples/: demo_memory_bridge.py  demo_mqtt_kafka.py  demo_schema_pipeline.py
interface_core/interface_core/: __init__.py  api.py  config.py  consul_discovery.py  event_bus.py  logging_setup.py  main.py  models.py  persistence.py  registry.py  store.py  telemetry.py
interface_core/interface_core/adapters/: base.py
interface_core/interface_core/ml/: matcher.py
interface_core/interface_core/phases/: discovery.py  grpc_transport.py  lifecycle.py  matching.py  policy.py  process_scanner.py  runner.py  synthesis.py  transports.py
interface_core/interface_core/schema/: converters.py  security.py  topology.py
interface_core/tests/: test_interface_core.py
